creata sezione nell'header

--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
                 <div class="link">link link link link link</div>
                 <div class="login">login</div>
             </div>
-
+            <section>
+                <div class="box"></div>
+            </section>
         </div>
     
     </header>
 
     <main>
+        
+
 
     </main>
 
