--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
             
         </section>
 
+        <section class="section5-container">
+            <div class="container2">
+                <div class="box4"></div>
+                <div class="box5"></div>
+                <div class="box5"></div>
+                <div class="box5"></div>
+                <div class="box5"></div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
