inserita sezione footer

--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
         </section>
 
     </main>
-
+<hr>
     <footer>
-
+        <div class="section6-container">
+            <div class="logo-footer">logo</div>
+            <div class="bottone">bottone</div>
+        </div>
     </footer>
     
 </body>
